<resources>
    <string name="app_name">whint</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_stock_in">Stock In</string>
    <string name="please_fill_all_fields">Please fill all fields</string>
    <string name="please_enter_barcode">Please enter Barcode</string>
    <string name="you_need_the_camera_permission">You need the camera permission to be able to use this app</string>
    <string name="stock_in">Stock In</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="article_name">Article Name</string>
    <string name="article_code">Article Code</string>
    <string name="article_id">Article ID</string>
    <string name="quantity">Quantity</string>
    <string name="article_price">Article Price</string>
    <string name="exit">exit</string>
    <string name="scan">Scan</string>
    <string name="add_manual">Add Manual</string>
    <string name="no_item_added_please_add">No items added, please Add!</string>
    <string name="document_number">Document Number</string>
    <string name="item_saved">Item saved</string>
    <string name="select_date">Select Date</string>
    <string name="document_date">Document Date</string>
    <string name="please_fill_doc_number">Please fill Document Number</string>
    <string name="please_select_doc_date">Please Select Document Date</string>
    <string name="title_profile">Profile</string>
    <string name="main_stock">Main</string>
    <string name="damaged_stock">Damaged</string>
    <string name="return_stock">Return</string>
    <string name="store">Store:</string>
    <string name="store_name">Store Name</string>
    <string name="stock_transfer">Transfer</string>
    <string name="stock_out">Stock Out</string>
    <string name="title_stock_out">Stock Out</string>
    <string name="warehouse">Warehouse:</string>
    <string name="stock">Stock</string>
</resources>