<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dft_padding"
    tools:context=".ui.home.stockIn.StockInAddFragment">

    <TextView
        android:id="@+id/tv_articleName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/article_name"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_articleCode"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/article_code"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_articleName" />

    <TextView
        android:id="@+id/articleID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/article_id"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_articleCode" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_edit"
        android:layout_width="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_edit_24"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@id/tv_articleName"
        app:layout_constraintStart_toEndOf="@id/tv_articleName"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/et_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/quantity"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@id/et_articlePrice" />

    <EditText
        android:id="@+id/et_articlePrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/article_price"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@id/btn_add" />

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_scan"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_scan" />

</androidx.constraintlayout.widget.ConstraintLayout>