<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ksharshembie.whint.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.ksharshembie.whint.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.ksharshembie.whint.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/stockInFragment"
        android:name="com.ksharshembie.whint.ui.home.stockIn.StockInFragment"
        android:label="@string/title_stock_in"
        tools:layout="@layout/fragment_stock_in" />
    <fragment
        android:id="@+id/scanFragment"
        android:name="com.ksharshembie.whint.ui.scan.ScanFragment"
        android:label="Scan"
        tools:layout="@layout/fragment_scan" />
    <fragment
        android:id="@+id/stockInAddFragment"
        android:name="com.ksharshembie.whint.ui.home.stockIn.StockInAddFragment"
        android:label="Stock in Add"
        tools:layout="@layout/fragment_stock_in_add" />
    <fragment
        android:id="@+id/articleEditFragment"
        android:name="com.ksharshembie.whint.ui.article.ArticleEditFragment"
        android:label="Article Update"
        tools:layout="@layout/fragment_article_edit" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.ksharshembie.whint.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>