<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dft_padding">

    <TextView
        android:id="@+id/articleName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/article_name"
        android:textSize="8sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_articleName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/article_name"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/articleName" />

    <TextView
        android:id="@+id/articleCode"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/article_code"
        android:textSize="8sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_articleName" />

    <TextView
        android:id="@+id/tv_articleCode"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/article_code"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/articleCode" />

    <TextView
        android:id="@+id/quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/quantity"
        android:textAlignment="textEnd"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/quantity"
        android:textAlignment="textEnd"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/quantity" />

    <TextView
        android:id="@+id/articlePrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/article_price"
        android:textAlignment="textEnd"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_quantity" />

    <TextView
        android:id="@+id/tv_articlePrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/article_price"
        android:textAlignment="textEnd"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/articlePrice" />


</androidx.constraintlayout.widget.ConstraintLayout>